F&GDEV/src/objects/PlanCode__c.object
<CustomObject>
    <fields>
        <fullName>IsNYProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NY Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSinglePremiumProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single Premium Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlanCode__c</fullName>
        <externalId>true</externalId>
        <label>Plan Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Product Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Plan Code</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NY_Plan_Codes</fullName>
        <columns>NAME</columns>
        <columns>PlanCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsNYProduct__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>NY_Plan_Codes</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>